feat: add core and monitor module refresh config logic
