# docs/openapi.json
@@ -783,51 +783,19 @@
             "Direction": {
                 "description": "The direction of an activity.",
                 "type": "string",
-                "enum": [
-                    "in",
-                    "out",
-                    "self"
-                ]
+                "enum": ["in","out","self"]
             },
             "Tag": {
                 "description": "A tag used to categorize activities.",
                 "type": "string",
                 "example": "transaction",
-                "enum": [
-                    "collectible",
-                    "exchange",
-                    "metaverse",
-                    "rss",
-                    "social",
-                    "transaction",
-                    "unknown"
-                ]
+                "enum": ["collectible","exchange","metaverse","rss","social","transaction","unknown"]
             },
             "Type": {
                 "description": "A type used to categorize activities, it must be present with a tag.",
                 "type": "string",
                 "example": "transfer",
-                "enum": [
-                    "approval",
-                    "bridge",
-                    "burn",
-                    "comment",
-                    "delete",
-                    "feed",
-                    "liquidity",
-                    "mint",
-                    "post",
-                    "profile",
-                    "proxy",
-                    "revise",
-                    "reward",
-                    "share",
-                    "staking",
-                    "swap",
-                    "trade",
-                    "transfer",
-                    "unknown"
-                ]
+                "enum": ["approval","bridge","burn","comment","delete","feed","liquidity","mint","post","profile","proxy","revise","reward","share","staking","swap","trade","transfer","unknown"]
             },
             "To": {
                 "description": "The address to which the action is directed.",
@@ -837,53 +805,13 @@
                 "description": "The network on which activities occur.",
                 "type": "string",
                 "example": "ethereum",
-                "enum": [
-                    "arbitrum",
-                    "arweave",
-                    "avax",
-                    "base",
-                    "binance-smart-chain",
-                    "crossbell",
-                    "ethereum",
-                    "farcaster",
-                    "gnosis",
-                    "linea",
-                    "mastodon",
-                    "optimism",
-                    "polygon",
-                    "vsl"
-                ]
+                "enum": ["arbitrum","arweave","avax","base","binance-smart-chain","crossbell","ethereum","farcaster","gnosis","linea","mastodon","optimism","polygon","vsl"]
             },
             "Platform": {
                 "description": "The platform on which activities occur.",
                 "type": "string",
                 "example": "Uniswap",
-                "enum": [
-                    "1inch",
-                    "AAVE",
-                    "Aavegotchi",
-                    "Crossbell",
-                    "Curve",
-                    "ENS",
-                    "Farcaster",
-                    "Highlight",
-                    "IQWiki",
-                    "KiwiStand",
-                    "Lens",
-                    "Lido",
-                    "LooksRare",
-                    "Matters",
-                    "Mirror",
-                    "OpenSea",
-                    "Optimism",
-                    "Paragraph",
-                    "RSS3",
-                    "SAVM",
-                    "Stargate",
-                    "Uniswap",
-                    "Unknown",
-                    "VSL"
-                ]
+                "enum": ["1inch","AAVE","Aavegotchi","Crossbell","Curve","ENS","Farcaster","Highlight","IQWiki","KiwiStand","Lens","Lido","LooksRare","Matters","Mirror","OpenSea","Optimism","Paragraph","RSS3","SAVM","Stargate","Uniswap","Unknown","VSL"]
             },
             "Timestamp": {
                 "description": "The timestamp of when the activity occurred.",
