# internal/node/monitor/server.go
@@ -10,20 +10,28 @@ import (
 	"github.com/redis/rueidis"
 	"github.com/robfig/cron/v3"
 	"github.com/rss3-network/node/config"
+	"github.com/rss3-network/node/config/parameter"
 	"github.com/rss3-network/node/internal/database"
+	"github.com/rss3-network/node/provider/ethereum/contract/vsl"
 	"github.com/rss3-network/protocol-go/schema/network"
 )
 
 type Monitor struct {
-	config         *config.File
-	cron           *cron.Cron
-	databaseClient database.Client
-	redisClient    rueidis.Client
-	clients        map[network.Network]Client
+	config              *config.File
+	cron                *cron.Cron
+	databaseClient      database.Client
+	redisClient         rueidis.Client
+	networkParamsCaller *vsl.NetworkParamsCaller
+	settlementCaller    *vsl.SettlementCaller
+	clients             map[network.Network]Client
 }
 
 func (m *Monitor) Run(ctx context.Context) error {
 	_, err := m.cron.AddFunc("@every 15m", func() {
+		if err := parameter.CheckParamsTask(ctx, m.redisClient, m.networkParamsCaller, m.settlementCaller); err != nil {
+			return
+		}
+
 		if err := m.MonitorWorkerStatus(ctx); err != nil {
 			return
 		}
@@ -69,7 +77,7 @@ func initNetworkClient(m *config.Module) (Client, error) {
 }
 
 // NewMonitor creates a new monitor instance.
-func NewMonitor(_ context.Context, configFile *config.File, databaseClient database.Client, redisClient rueidis.Client) (*Monitor, error) {
+func NewMonitor(_ context.Context, configFile *config.File, databaseClient database.Client, redisClient rueidis.Client, networkParamsCaller *vsl.NetworkParamsCaller, settlementCaller *vsl.SettlementCaller) (*Monitor, error) {
 	modules := append(append(configFile.Component.Decentralized, configFile.Component.RSS...), configFile.Component.Federated...)
 
 	clients := make(map[network.Network]Client)
@@ -85,11 +93,13 @@ func NewMonitor(_ context.Context, configFile *config.File, databaseClient datab
 	}
 
 	instance := &Monitor{
-		config:         configFile,
-		cron:           cron.New(),
-		databaseClient: databaseClient,
-		redisClient:    redisClient,
-		clients:        clients,
+		config:              configFile,
+		cron:                cron.New(),
+		databaseClient:      databaseClient,
+		redisClient:         redisClient,
+		clients:             clients,
+		networkParamsCaller: networkParamsCaller,
+		settlementCaller:    settlementCaller,
 	}
 
 	// register router
